// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shortcuts Should display a shortcut directory with its files 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CozyTheme--light-normal u-dc"
      >
        <div
          class="shortcuts-list-wrapper u-m-auto u-w-100"
        >
          <h6
            class="MuiTypography-root styles__divider___SuA5q u-mv-0 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            List title
          </h6>
          <div
            class="shortcuts-list u-w-100 u-mv-3 u-mv-2-t u-mh-auto u-flex-justify-center"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineNone scale-hover MuiTypography-colorPrimary"
              href="#"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                class="makeStyles-tileWrapper-7"
                data-testid="square-app-icon"
              >
                <div
                  class="CozyTheme--light-normal u-dc"
                >
                  <span
                    class="MuiBadge-root-10"
                  >
                    <span
                      class="MuiBadge-root-10 styles__SquareAppIcon-wrapper___2SEuM makeStyles-shadow-5"
                      style="background-color: rgb(53, 206, 104);"
                    >
                      <h2
                        class="MuiTypography-root-33 makeStyles-letter-4 MuiTypography-h2-39 MuiTypography-colorTextPrimary-58 MuiTypography-alignCenter-49"
                      >
                        L
                      </h2>
                      <span
                        class="MuiBadge-badge-11 badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular-17"
                      />
                    </span>
                    <span
                      class="MuiBadge-badge-11 Component-qualifier-9 MuiBadge-anchorOriginBottomRightRectangular-19"
                    >
                      <svg
                        class="styles__icon___23x3R"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <path
                          d="M9 0v2h3.5L6 8.5 7.5 10 14 3.5V7h2V1.003A.996.996 0 0014.997 0H9zM7 2V0H1.003A1 1 0 000 1v14c0 .552.445 1 1 1h14c.552 0 1-.438 1-1.003V9h-2v5H2V2h5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <h6
                  class="MuiTypography-root makeStyles-name-1 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                >
                  List item
                </h6>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CozyTheme--light-normal u-dc"
    >
      <div
        class="shortcuts-list-wrapper u-m-auto u-w-100"
      >
        <h6
          class="MuiTypography-root styles__divider___SuA5q u-mv-0 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          List title
        </h6>
        <div
          class="shortcuts-list u-w-100 u-mv-3 u-mv-2-t u-mh-auto u-flex-justify-center"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineNone scale-hover MuiTypography-colorPrimary"
            href="#"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="makeStyles-tileWrapper-7"
              data-testid="square-app-icon"
            >
              <div
                class="CozyTheme--light-normal u-dc"
              >
                <span
                  class="MuiBadge-root-10"
                >
                  <span
                    class="MuiBadge-root-10 styles__SquareAppIcon-wrapper___2SEuM makeStyles-shadow-5"
                    style="background-color: rgb(53, 206, 104);"
                  >
                    <h2
                      class="MuiTypography-root-33 makeStyles-letter-4 MuiTypography-h2-39 MuiTypography-colorTextPrimary-58 MuiTypography-alignCenter-49"
                    >
                      L
                    </h2>
                    <span
                      class="MuiBadge-badge-11 badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular-17"
                    />
                  </span>
                  <span
                    class="MuiBadge-badge-11 Component-qualifier-9 MuiBadge-anchorOriginBottomRightRectangular-19"
                  >
                    <svg
                      class="styles__icon___23x3R"
                      height="10"
                      viewBox="0 0 16 16"
                      width="10"
                    >
                      <path
                        d="M9 0v2h3.5L6 8.5 7.5 10 14 3.5V7h2V1.003A.996.996 0 0014.997 0H9zM7 2V0H1.003A1 1 0 000 1v14c0 .552.445 1 1 1h14c.552 0 1-.438 1-1.003V9h-2v5H2V2h5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <h6
                class="MuiTypography-root makeStyles-name-1 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
              >
                List item
              </h6>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Shortcuts Should display multiple sections for multiple directories 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CozyTheme--light-normal u-dc"
      >
        <div
          class="shortcuts-list-wrapper u-m-auto u-w-100"
        >
          <h6
            class="MuiTypography-root styles__divider___SuA5q u-mv-0 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            a
          </h6>
          <div
            class="shortcuts-list u-w-100 u-mv-3 u-mv-2-t u-mh-auto u-flex-justify-center"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineNone scale-hover MuiTypography-colorPrimary"
              href="#"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                class="makeStyles-tileWrapper-69"
                data-testid="square-app-icon"
              >
                <div
                  class="CozyTheme--light-normal u-dc"
                >
                  <span
                    class="MuiBadge-root-72"
                  >
                    <span
                      class="MuiBadge-root-72 styles__SquareAppIcon-wrapper___2SEuM makeStyles-shadow-67"
                      style="background-color: rgb(252, 109, 0);"
                    >
                      <h2
                        class="MuiTypography-root-95 makeStyles-letter-66 MuiTypography-h2-101 MuiTypography-colorTextPrimary-120 MuiTypography-alignCenter-111"
                      >
                        B
                      </h2>
                      <span
                        class="MuiBadge-badge-73 badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular-79"
                      />
                    </span>
                    <span
                      class="MuiBadge-badge-73 Component-qualifier-71 MuiBadge-anchorOriginBottomRightRectangular-81"
                    >
                      <svg
                        class="styles__icon___23x3R"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <path
                          d="M9 0v2h3.5L6 8.5 7.5 10 14 3.5V7h2V1.003A.996.996 0 0014.997 0H9zM7 2V0H1.003A1 1 0 000 1v14c0 .552.445 1 1 1h14c.552 0 1-.438 1-1.003V9h-2v5H2V2h5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <h6
                  class="MuiTypography-root makeStyles-name-63 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                >
                  b
                </h6>
              </div>
            </a>
          </div>
        </div>
        <div
          class="shortcuts-list-wrapper u-m-auto u-w-100"
        >
          <h6
            class="MuiTypography-root styles__divider___SuA5q u-mv-0 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            c
          </h6>
          <div
            class="shortcuts-list u-w-100 u-mv-3 u-mv-2-t u-mh-auto u-flex-justify-center"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineNone scale-hover MuiTypography-colorPrimary"
              href="#"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                class="makeStyles-tileWrapper-69"
                data-testid="square-app-icon"
              >
                <div
                  class="CozyTheme--light-normal u-dc"
                >
                  <span
                    class="MuiBadge-root-126"
                  >
                    <span
                      class="MuiBadge-root-126 styles__SquareAppIcon-wrapper___2SEuM makeStyles-shadow-67"
                      style="background-color: rgb(255, 150, 47);"
                    >
                      <h2
                        class="MuiTypography-root-149 makeStyles-letter-66 MuiTypography-h2-155 MuiTypography-colorTextPrimary-174 MuiTypography-alignCenter-165"
                      >
                        D
                      </h2>
                      <span
                        class="MuiBadge-badge-127 badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular-133"
                      />
                    </span>
                    <span
                      class="MuiBadge-badge-127 Component-qualifier-125 MuiBadge-anchorOriginBottomRightRectangular-135"
                    >
                      <svg
                        class="styles__icon___23x3R"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <path
                          d="M9 0v2h3.5L6 8.5 7.5 10 14 3.5V7h2V1.003A.996.996 0 0014.997 0H9zM7 2V0H1.003A1 1 0 000 1v14c0 .552.445 1 1 1h14c.552 0 1-.438 1-1.003V9h-2v5H2V2h5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <h6
                  class="MuiTypography-root makeStyles-name-63 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                >
                  d
                </h6>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CozyTheme--light-normal u-dc"
    >
      <div
        class="shortcuts-list-wrapper u-m-auto u-w-100"
      >
        <h6
          class="MuiTypography-root styles__divider___SuA5q u-mv-0 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          a
        </h6>
        <div
          class="shortcuts-list u-w-100 u-mv-3 u-mv-2-t u-mh-auto u-flex-justify-center"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineNone scale-hover MuiTypography-colorPrimary"
            href="#"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="makeStyles-tileWrapper-69"
              data-testid="square-app-icon"
            >
              <div
                class="CozyTheme--light-normal u-dc"
              >
                <span
                  class="MuiBadge-root-72"
                >
                  <span
                    class="MuiBadge-root-72 styles__SquareAppIcon-wrapper___2SEuM makeStyles-shadow-67"
                    style="background-color: rgb(252, 109, 0);"
                  >
                    <h2
                      class="MuiTypography-root-95 makeStyles-letter-66 MuiTypography-h2-101 MuiTypography-colorTextPrimary-120 MuiTypography-alignCenter-111"
                    >
                      B
                    </h2>
                    <span
                      class="MuiBadge-badge-73 badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular-79"
                    />
                  </span>
                  <span
                    class="MuiBadge-badge-73 Component-qualifier-71 MuiBadge-anchorOriginBottomRightRectangular-81"
                  >
                    <svg
                      class="styles__icon___23x3R"
                      height="10"
                      viewBox="0 0 16 16"
                      width="10"
                    >
                      <path
                        d="M9 0v2h3.5L6 8.5 7.5 10 14 3.5V7h2V1.003A.996.996 0 0014.997 0H9zM7 2V0H1.003A1 1 0 000 1v14c0 .552.445 1 1 1h14c.552 0 1-.438 1-1.003V9h-2v5H2V2h5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <h6
                class="MuiTypography-root makeStyles-name-63 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
              >
                b
              </h6>
            </div>
          </a>
        </div>
      </div>
      <div
        class="shortcuts-list-wrapper u-m-auto u-w-100"
      >
        <h6
          class="MuiTypography-root styles__divider___SuA5q u-mv-0 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          c
        </h6>
        <div
          class="shortcuts-list u-w-100 u-mv-3 u-mv-2-t u-mh-auto u-flex-justify-center"
        >
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineNone scale-hover MuiTypography-colorPrimary"
            href="#"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="makeStyles-tileWrapper-69"
              data-testid="square-app-icon"
            >
              <div
                class="CozyTheme--light-normal u-dc"
              >
                <span
                  class="MuiBadge-root-126"
                >
                  <span
                    class="MuiBadge-root-126 styles__SquareAppIcon-wrapper___2SEuM makeStyles-shadow-67"
                    style="background-color: rgb(255, 150, 47);"
                  >
                    <h2
                      class="MuiTypography-root-149 makeStyles-letter-66 MuiTypography-h2-155 MuiTypography-colorTextPrimary-174 MuiTypography-alignCenter-165"
                    >
                      D
                    </h2>
                    <span
                      class="MuiBadge-badge-127 badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular-133"
                    />
                  </span>
                  <span
                    class="MuiBadge-badge-127 Component-qualifier-125 MuiBadge-anchorOriginBottomRightRectangular-135"
                  >
                    <svg
                      class="styles__icon___23x3R"
                      height="10"
                      viewBox="0 0 16 16"
                      width="10"
                    >
                      <path
                        d="M9 0v2h3.5L6 8.5 7.5 10 14 3.5V7h2V1.003A.996.996 0 0014.997 0H9zM7 2V0H1.003A1 1 0 000 1v14c0 .552.445 1 1 1h14c.552 0 1-.438 1-1.003V9h-2v5H2V2h5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <h6
                class="MuiTypography-root makeStyles-name-63 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
              >
                d
              </h6>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Shortcuts Should display nothing if nothing was found 1`] = `
<div>
  <div
    class="CozyTheme--light-normal u-dc"
  />
</div>
`;
